--- a/user.html
+++ b/user.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-     <!-- ----Header----- -->
+     <!-- --------------------------Header------------------------- -->
     <header>
         <nav>
             <!-- logo -->
@@ -35,7 +35,7 @@
         </nav>
     </header>
 
-    <!-- user section -->
+    <!-- ----------------user section---------------------- -->
      <div class="user-container">
 
         <div id="sideNav" class="side-nav">
@@ -60,12 +60,12 @@
                     <li><a href="#">Portfolio Tracking</a></li>
                     <li><a href="#">investment Option</a></li>
                     <li><a href="#">Settings</a></li>
-                    <li><a href="landing.html">About Us</a></li>
+                    <li><a href="index.html">About Us</a></li>
                     <li><a href="#">Log Out</a></li>
                 </ul>
-
             </div>
         </div>
+
 
         <div class="hero">
             <div class="openicon-div">
@@ -79,15 +79,7 @@
             <div class="analytics-container">
                 <!-- Top -->
                 <div class="account-status">
-                    <figure class="top-balance-container">
-                        <p>Total Balance  
-                            <span><img src="./images/eye-off.svg" alt="#">
-                            </span>
-                        </p>
-                        <p> #3500 
-                        <span><img src="./images/refreshicon.svg" alt="#"></span></p>
-                    </figure>
-
+                   
                     <figure class="bottom-balance-container">
                         <!-- 1st row -->
                         <div class="withdraw-container">
@@ -98,21 +90,21 @@
 
                          <!-- 2nd row -->
                         <div class="withdraw-container">
-                            <span><img src="./images/credit-card.svg" alt="#"></span>
+                            <span><img src="./images/cash.svg" alt="#"></span>
                             <p>Total Deposit</p>
                             <p>#4200</p>
                         </div> 
 
                          <!-- 3rd row -->
                          <div class="withdraw-container">
-                            <span><img src="./images/credit-card.svg" alt="#"></span>
+                            <span><img src="./images/chart-line.svg" alt="#"></span>
                             <p>Total investment</p>
                             <p>#5500</p>
                         </div> 
 
                          <!-- 4th row -->
                         <div class="withdraw-container">
-                            <span><img src="./images/credit-card.svg" alt="#"></span>
+                            <span><img src="./images/icon.svg" alt="#"></span>
                             <p>Current Investment</p>
                             <p>#4500</p>
                         </div> 
@@ -121,19 +113,32 @@
 
 
                 <div class="graph">
-                    <figure>
-                        <img src="./images/CHART 2.svg" alt="#">
-                    </figure>
+                    <div class="top-graph">
+                        <figure class="total-bal-container">
+                           <div class="Total-bal-article">
+                              <p class="hash">#</p>
+                              <div class="digit-container">
+                                 <p>Total Balance <img src="./images/chart-line.svg" alt="#"></p>
+                                 <p class="digit">#732.000</p>
+                              </div>
+                           </div>
+                        </figure>
 
-                    <figure>
-                        <img src="./images/Chart1.svg" alt="#">
-                    </figure>
-                </div>
+                        <figure class="history-container">
+                            <img src="./images/Group 1000002311.svg" alt="#">
+                        </figure>
+                    </div>
 
-                <div class="activity">
-                    <figure>
-                        <img src="./images/Activity.svg" alt="#">
-                    </figure>
+                    <div class="bottom-graph">
+                        <figure class="analytics-graph">
+                            <img src="./images/analyticsgraph.svg" alt="#">
+                        </figure>
+
+                        <figure class="analytics-graph">
+                            <img class="chart" src="./images/Chart.svg" alt="#">
+                        </figure>
+                    </div>
+                   
                 </div>
             </div>
         </div>
