--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 
                 <ul class="menu-list">
                     <li><a href="sign-in.html">SignIn</a></li>
-                    <li><a href="splash-screen.html">Get Started</a></li>
+                     <!-- <li><a href="splash-screen.html">Get Started</a></li> -->
+                    <li><a href="signup.html">Get Started</a></li>
                 </ul>
              </div>
         </nav>
