--- a/forgot-password.html
+++ b/forgot-password.html
@@ -12,12 +12,12 @@
         <div class="form-container">
             <div class="logo-container">
                 <img src="images/ATLAS logo.png" alt="logo">
-                <h1>Atlastvest</h1>
+                <h1>Atlasvest</h1>
             </div>
             <div class="space">
                 <h1>Forgot Password</h1>
                 <p>
-                    Enter the email address regidtered with your account. We'll send you a link to reset your password
+                    Enter the email address registered with your account. We'll send you a link to reset your password
                 </p>
             </div>
             <form>
