--- a/signup.html
+++ b/signup.html
@@ -12,7 +12,8 @@
         <div class="form-container">
             <div class="logo-container">
                 <img src="images/ATLAS logo.png" alt="logo">
-                <h1>Atlastvest.</h1>
+                <h1>Atlasvest.</h1>
+            
             </div>
             <h1>Create an account</h1>
             <form id="signUpForm">
